k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommender-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
spec:
  selector:
    app: recommender
    variant: proper
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: recommender-fallback-service
spec:
  selector:
    app: recommender
    variant: fallback
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
